[gd_scene load_steps=22 format=3 uid="uid://d2w2i5h0lhc6l"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_fxbww"]
[ext_resource type="Texture2D" uid="uid://bl53gpvg5mh1y" path="res://assets/sprites/slime_green.png" id="1_nuk1g"]
[ext_resource type="PackedScene" uid="uid://dtrbka1ef726o" path="res://scenes/killzone.tscn" id="2_aiwyj"]
[ext_resource type="PackedScene" uid="uid://5jb8txn2n27o" path="res://scenes/hitbox_component.tscn" id="5_meor6"]
[ext_resource type="PackedScene" uid="uid://dgif2qykfetra" path="res://scenes/health_component.tscn" id="5_x47ap"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ayoyu"]
atlas = ExtResource("1_nuk1g")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ponx"]
atlas = ExtResource("1_nuk1g")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57lo"]
atlas = ExtResource("1_nuk1g")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a8la"]
atlas = ExtResource("1_nuk1g")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2si0"]
atlas = ExtResource("1_nuk1g")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpgbx"]
atlas = ExtResource("1_nuk1g")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw7s3"]
atlas = ExtResource("1_nuk1g")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d31g5"]
atlas = ExtResource("1_nuk1g")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_66xto"]
atlas = ExtResource("1_nuk1g")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5kow"]
atlas = ExtResource("1_nuk1g")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6gq6"]
atlas = ExtResource("1_nuk1g")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jainl"]
atlas = ExtResource("1_nuk1g")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8uf2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayoyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ponx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a8la")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2si0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpgbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw7s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d31g5")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66xto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5kow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6gq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jainl")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4xjq"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hcfh"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3tbm"]
size = Vector2(10, 15)

[node name="Slime" type="Node2D" groups=["enemies"]]
z_index = 1
script = ExtResource("1_fxbww")

[node name="AnimatedSpriteSlime" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_a8uf2")
animation = &"hit"
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_aiwyj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_u4xjq")

[node name="KillBody" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBody"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_0hcfh")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_meor6")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_g3tbm")

[node name="HealthComponent" parent="." instance=ExtResource("5_x47ap")]
MAX_HEALTH = 15.0

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-9, 0)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(-10, -7)
target_position = Vector2(0, 13)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(10, -7)
target_position = Vector2(0, 13)

[connection signal="animation_finished" from="AnimatedSpriteSlime" to="." method="_on_animated_sprite_slime_animation_finished"]
[connection signal="area_entered" from="Killzone" to="." method="_on_killzone_area_entered"]
[connection signal="area_entered" from="KillBody" to="." method="_on_kill_body_area_entered"]
